# scPortrait

./: .bumpversion.toml  .gitignore  .gitmodules  .pre-commit-ci-config.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_optional.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/additional_files/: environment.yml
.github/workflows/: bump_version.yml  create_release.yml  delete_workflow_runs.yml  e2e_test.yml  environment.yml  generate_documentation.yml  publish_on_pypi.yml  release.yaml  sphinx-gh-pages.yml  unit_test.yml
development/: processing_notebook.ipynb
docs/: CONTRIBUTING.md  Makefile  api.md  conf.py  contributing.md  index.html  index.rst
docs/_static/: custom.css  hide_links.css
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/pages/: ecosystem 2.doctree  ecosystem.doctree  example_notebooks.doctree  module 2.doctree  module.doctree  pipeline.doctree  quickstart 2.doctree  quickstart.doctree  sparcscmd.doctree  tutorials 2.doctree  tutorials.doctree
docs/html/: .buildinfo  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex 2.js  searchindex.js
docs/html/_sources/: index 2.rst  index.rst.txt
docs/html/_static/: custom.css  custom.scss  webpack-macros 2.html
docs/html/pages/: ecosystem 2.html  ecosystem.html  example_notebooks 2.html  example_notebooks.html  module 2.html  module.html  pipeline.html  quickstart.html  sparcscmd 2.html  sparcscmd.html  tutorials.html
docs/notebooks/: example.ipynb
docs/pages/: _notebook_sharded_hpa.nblink  _notebook_sharded_large.nblink  example_notebooks.ipynb  example_notebooks.rst  installation.rst  introduction.rst  module.rst  pipeline.rst  tutorials.rst  workflow.rst
docs/pages/module/: io.rst  pipeline.rst  plotting.rst  processing.rst  tools.rst
docs/pages/notebooks/: Example_Notebook_TimeCourse_Project.ipynb  _notebook_deep_learning.nblink  _notebook_segmentation_workflows.nblink  _notebook_single_cell_extraction_configuration.nblink  _notebook_workflow_walkthrough.nblink  example_notebook_segmentation_workflows.ipynb  example_parsing_notebook.ipynb  example_stitching_notebook.ipynb
docs/pages/pipeline/: config.rst  extraction.rst  featurization.rst  segmentation.rst  selection.rst  spatialdata.rst  stitching.rst
docs/pages/quickstart/: installation.rst
docs/pages/tutorials/: Example_Notebook_TimeCourse_Project.ipynb
docs/pages/workflow/: config.rst  featurization_methods.rst  package_design.rst  project.rst  segmentation_workflow.rst  single_cell_image_format.rst
docs_source/: Makefile  conf.py  index.rst
docs_source/pages/: ecosystem.rst  example_notebooks.rst  module.rst  pipeline.rst  sparcscmd.rst
docs_source/pages/ecosystem/: computational_workflow.rst  installation.rst
docs_source/pages/module/: ml.rst  pipeline.rst  processing.rst  tools.rst  utils.rst
docs_source/pages/notebooks/: Example_Notebook_TimeCourse_Project.ipynb  config_test.yml  example_notebook_segmentation_workflows.ipynb
docs_source/pages/pipeline/: classification.rst  config.rst  extraction.rst  project.rst  segmentation.rst  stitching.rst
docs_source/pages/quickstart/: computational_workflow.rst  installation.rst  introduction.rst
docs_source/pages/sparcscmd/: sparcs_cleanup.rst  sparcs_split.rst  sparcs_stat.rst
example_data/example_1/: config_example1.yml  processing_notebook_sharded.ipynb
example_data/example_2/: config_example2.yml  processing_notebook.ipynb
example_data/example_2/input_images/: ch1.tif  ch2.tif  ch3.tif
example_data/example_3/: config_example3.yml
example_data/example_3/input_images/: Ch1.tif  Ch2.tif  Ch3.tif
example_data/example_4/: config_example4.yml  processing_notebook.ipynb
example_data/example_5/: config_example5.yml  plate_layout.tsv
example_data/example_6/: config_example6.yml  metadata.csv  processing_notebook.ipynb
example_data/example_config_files/: config_screen_autophagy.yml  config_training 2.yml  config_training_autophagy.yml  config_training_golgi.yml
example_data/example_stitching/raw_image_tiles/: Timepoint001_Row02_Well04_Alexa488_zstack001_r000_c000.tif  Timepoint001_Row02_Well04_Alexa488_zstack001_r000_c001.tif  Timepoint001_Row02_Well04_Alexa488_zstack001_r000_c002.tif  Timepoint001_Row02_Well04_Alexa488_zstack001_r001_c000.tif  Timepoint001_Row02_Well04_Alexa488_zstack001_r001_c001.tif  Timepoint001_Row02_Well04_Alexa488_zstack001_r001_c002.tif  Timepoint001_Row02_Well04_Alexa488_zstack001_r002_c000.tif  Timepoint001_Row02_Well04_Alexa488_zstack001_r002_c001.tif  Timepoint001_Row02_Well04_Alexa488_zstack001_r002_c002.tif  Timepoint001_Row02_Well04_DAPI_zstack001_r000_c000.tif  Timepoint001_Row02_Well04_DAPI_zstack001_r000_c001.tif  Timepoint001_Row02_Well04_DAPI_zstack001_r000_c002.tif  Timepoint001_Row02_Well04_DAPI_zstack001_r001_c000.tif  Timepoint001_Row02_Well04_DAPI_zstack001_r001_c001.tif  Timepoint001_Row02_Well04_DAPI_zstack001_r001_c002.tif  Timepoint001_Row02_Well04_DAPI_zstack001_r002_c000.tif  Timepoint001_Row02_Well04_DAPI_zstack001_r002_c001.tif  Timepoint001_Row02_Well04_DAPI_zstack001_r002_c002.tif  Timepoint001_Row02_Well04_mCherry_zstack001_r000_c000.tif  Timepoint001_Row02_Well04_mCherry_zstack001_r000_c001.tif  (+7 more)
examples/code_snippets/: GALLERY_HEADER.rst
examples/code_snippets/plotting/: GALLERY_HEADER.rst  (+2 more)
notebooks/: introduction.ipynb  settings.yaml
requirements/: requirements.txt  requirements_convnext.txt  requirements_docs.txt  requirements_plotting.txt  requirements_stitching.txt
scripts/: processing_notebook.ipynb
src/scportrait/: __init__.py  processing_test.py
src/sparcscmd/: sparcs-cleanup.py  sparcs-split.py  sparcs-stat.py
src/sparcscore/: processing_test.py
src/sparcspy/: __init__.py
tests/: conftest.py  processing_test.py  test_basic.py  test_project.py
tests/e2e_tests/: conftest.py  segmentation_workflow.py  test_data_loaders.py  test_full_pipeline_run.py
(+382 files in other folders)
